# c-blosc

./: .gitignore  CMakeLists.txt  deps.json
bench/: CMakeLists.txt  bench.c
blosc/: CMakeLists.txt  blosc-export.h  blosc.h  shuffle-common.h  shuffle.c
blosc/win32/: blosc.def  stdint-windows.h
tests/: CMakeLists.txt
